Need to design the skills section.

--- a/src/index.css
+++ b/src/index.css
@@ -40,7 +40,9 @@
 }
 
 body {
-  background-image: url("./assets/Background/Background.png");
-  background-size: cover;
-  background-position: center;
+  background-size: 45px 45px;
+  background-color: #0b1120;
+  background-image:
+    linear-gradient(to right, rgb(39,45,62,255) 1px, transparent 1px),
+    linear-gradient(to bottom, rgb(39,45,62,255) 1px, transparent 1px);
 }
